--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -2544,7 +2544,7 @@
                 <div class="col-lg-4 responsive-column-half">
                     <div class="card card-item hover-s text-center">
                         <div class="card-body">
-                            <img src="{% static 'images/img-loading.png' %}" data-src="{% static 'images/small-img-2.jpg' %}" alt="تصویر کارت"
+                            <img src="{% static 'images/img-loading.png' %}" data-src="{% static 'images/about-us-lecture.jpg' %}" alt="تصویر کارت"
                                  class="img-fluid rounded-full lazy">
                             <h5 class="card-title pt-4 pb-2">مربی شوید</h5>
                             <p class="card-text">آنچه را که دوست دارید آموزش دهید. ادوکا ابزارهایی را برای ایجاد دوره در
@@ -2586,40 +2586,6 @@
                         </div><!-- end card-body -->
                     </div><!-- end card -->
                 </div><!-- end col-lg-4 -->
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </section>
-    <section class="subscriber-area pt-60px pb-60px bg-gray position-relative overflow-hidden">
-        <span class="stroke-shape stroke-shape-1"></span>
-        <span class="stroke-shape stroke-shape-2"></span>
-        <span class="stroke-shape stroke-shape-3"></span>
-        <span class="stroke-shape stroke-shape-4"></span>
-        <span class="stroke-shape stroke-shape-5"></span>
-        <span class="stroke-shape stroke-shape-6"></span>
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5">
-                    <div class="section-heading py-4">
-                        <h5 class="ribbon ribbon-lg mb-2">خبرنامه</h5>
-                        <h2 class="section__title mb-1">مشترک شدن در خبرنامه</h2>
-                        <p class="section__desc">با کتاب الکترونیکی رایگان جدید آشنا شوید</p>
-                    </div><!-- end section-heading -->
-                </div><!-- end col-lg-5 -->
-                <div class="col-lg-5 ml-auto">
-                    <form method="post" class="subscriber-form">
-                        <div class="input-group">
-                            <input type="email" name="email" class="form-control form--control pl-3"
-                                   placeholder="آدرس ایمیل را وارد کن">
-                            <div class="input-group-append">
-                                <button class="btn theme-btn" type="button">اشتراک <i
-                                        class="la la-arrow-left icon ml-1"></i></button>
-                            </div>
-                        </div>
-                        <p class="fs-14 mt-1">
-                            <i class="la la-lock mr-1"></i>اطلاعات شما نزد ما محفوظ می ماند! لغو اشتراک در هر زمان
-                        </p>
-                    </form>
-                </div><!-- end col-lg-6 -->
             </div><!-- end row -->
         </div><!-- end container -->
     </section>
