--- a/main_app/templates/main_app/about_page.html
+++ b/main_app/templates/main_app/about_page.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="generic-img-box generic-img-box-layout-3">
-                        <img src="{% static 'images/img-loading.png' %}" data-src="{% static 'images/img13.jpg' %}" alt="درباره تصویر"
+                        <img src="{% static 'images/img13.jpg' %}" data-src="{% static 'images/img13.jpg' %}" alt="درباره تصویر"
                              class="img__item lazy img__item-1"/>
                     </div>
                 </div>
