--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -9,39 +9,20 @@
                 <div class="col-lg-6">
                     <div class="header-widget">
                         <ul class="generic-list-item d-flex flex-wrap align-items-center fs-14">
-                            <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
-                                    class="la la-phone mr-1"></i><a href="tel:00123456789"> (00) 123 456 789</a></li>
+                            {% if site_setting.phone %}
+                                <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
+                                        class="la la-phone mr-1"></i><a href="tel:00123456789"> (00) 123 456 789</a>
+                                </li>
+                            {% endif %}
+
                             <li class="d-flex align-items-center"><i class="la la-envelope-o mr-1"></i><a
-                                    href="#"> info@nabieakram.ir</a></li>
+                                    href="#">{{ site_setting.email }}</a></li>
                         </ul>
                     </div>
                 </div>
                 <!-- حالت تاریک و نور و حساب کاربری -->
                 <div class="col-lg-6">
                     <div class="header-widget d-flex flex-wrap align-items-center justify-content-end">
-                        <!-- حالت تاریک و نور -->
-                        <div class="theme-picker d-flex align-items-center">
-                            <button class="theme-picker-btn dark-mode-btn" title="حالت تاریک">
-                                <svg id="moon" viewBox="0 0 24 24" stroke-width="1.5" stroke-linecap="round"
-                                     stroke-linejoin="round">
-                                    <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-                                </svg>
-                            </button>
-                            <button class="theme-picker-btn light-mode-btn" title="حالت نور">
-                                <svg id="sun" viewBox="0 0 24 24" stroke-width="1.5" stroke-linecap="round"
-                                     stroke-linejoin="round">
-                                    <circle cx="12" cy="12" r="5"></circle>
-                                    <line x1="12" y1="1" x2="12" y2="3"></line>
-                                    <line x1="12" y1="21" x2="12" y2="23"></line>
-                                    <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-                                    <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-                                    <line x1="1" y1="12" x2="3" y2="12"></line>
-                                    <line x1="21" y1="12" x2="23" y2="12"></line>
-                                    <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-                                    <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-                                </svg>
-                            </button>
-                        </div>
                         <!-- ثبت نام، لاگین، حساب کاربری -->
                         <ul class="generic-list-item d-flex flex-wrap align-items-center fs-14 border-right border-right-gray pl-3 ml-3">
                             {% if request.user.is_authenticated %}
