--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6943,7 +6943,9 @@ div.datedropper .picker .pick-lg-b li {
     position: relative;
     z-index: 2;
     padding-top: 200px;
-    padding-bottom: 270px;
+    padding-bottom: 500px;
+    background-size: cover;
+    background-position: center;
 }
 @media (max-width: 480px) {
     .hero-slider-item {
@@ -6958,7 +6960,7 @@ div.datedropper .picker .pick-lg-b li {
     height: 100%;
     width: 100%;
     background-color: #233d63;
-    opacity: 0.9;
+    opacity: 0.3;
     content: "";
     z-index: -1;
 }
@@ -6969,7 +6971,7 @@ div.datedropper .picker .pick-lg-b li {
     right: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../images/shape.png);
+    /*background-image: url(../images/shape.png);*/
     background-size: cover;
     background-position: center;
     z-index: 1;
