--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -82,7 +82,9 @@
                                              alt="تصویر دسته">
                                         <div class="category-content">
                                             <div class="category-inner">
-                                                <h3 class="cat__title"><a href="{% url 'blog_app:blog_list' %}?category={{ child.id }}">{{ child.title }}</a></h3>
+                                                <h3 class="cat__title"><a
+                                                        href="{% url 'blog_app:blog_list' %}?category={{ child.id }}">{{ child.title }}</a>
+                                                </h3>
                                                 <p class="cat__meta">{{ child.article_set.count }}</p>
                                                 <a href="{% url 'blog_app:blog_list' %}?category={{ child.id }}"
                                                    class="btn theme-btn theme-btn-sm theme-btn-white">
@@ -103,7 +105,9 @@
                                          alt="تصویر دسته">
                                     <div class="category-content">
                                         <div class="category-inner">
-                                            <h3 class="cat__title"><a href="{% url 'blog_app:blog_list' %}?category={{ article_category.id }}">{{ article_category.title }}</a></h3>
+                                            <h3 class="cat__title"><a
+                                                    href="{% url 'blog_app:blog_list' %}?category={{ article_category.id }}">{{ article_category.title }}</a>
+                                            </h3>
                                             <p class="cat__meta">{{ article_category.article_set.count }}</p>
                                             <a href="{% url 'blog_app:blog_list' %}?category={{ article_category.id }}"
                                                class="btn theme-btn theme-btn-sm theme-btn-white">
@@ -136,8 +140,10 @@
                             <h5 class="ribbon ribbon-lg mb-2">درباره ما</h5>
                             <h2 class="section__title">چرا هیئت نبی اکرم(ص)</h2>
                             <span class="section-divider"></span>
-                            <p class="section__desc">هیئت نبی اکرم (ص) از طریق تیم مدیریتی جهادی و با انگیزه مبتنی بر اصول اعتقادی و اخلاقی اسلامی تلاش می کند
-                                تا با انواع برنامه های متنوع و جذاب برای خانواده ها و تمام رده های سنی حیات طیبه قرآنی را رقم بزند.
+                            <p class="section__desc">هیئت نبی اکرم (ص) از طریق تیم مدیریتی جهادی و با انگیزه مبتنی بر
+                                اصول اعتقادی و اخلاقی اسلامی تلاش می کند
+                                تا با انواع برنامه های متنوع و جذاب برای خانواده ها و تمام رده های سنی حیات طیبه قرآنی
+                                را رقم بزند.
                             </p>
                         </div>
 
@@ -146,7 +152,8 @@
                             <div class="col-lg-4 responsive-column-half">
                                 <div class="info-icon-box mb-3">
                                     <div class="icon-element icon-element-md shadow-sm">
-                                        <svg class="svg-icon-color-1" width="32" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                                        <svg class="svg-icon-color-1" width="32" viewBox="0 0 512 512"
+                                             xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <path d="m181.022 142.59-8.659 3.138c-13.364 4.846-23.334 16.536-26.021 30.517l-2.938 15.396c-1.466 7.626.53 15.436 5.479 21.425 4.951 5.995 12.251 9.433 20.025 9.433h75.057c7.714 0 14.977-3.393 19.927-9.309 4.946-5.911 7.004-13.65 5.646-21.233l-2.74-15.315c-2.539-14.201-12.542-26.081-26.108-31.004l-9.18-3.327v-13.53c0-.38-.037-.75-.092-1.115 6.697-6.818 10.533-16.115 10.533-25.627v-20.159c0-19.678-16.01-35.687-35.689-35.687s-35.692 16.009-35.692 35.687v20.787c0 9.778 4.032 18.705 10.515 25.188-.038.304-.063.611-.063.925zm71.008 36.692 2.74 15.317c.574 3.201-.295 6.468-2.384 8.964-2.092 2.5-5.162 3.935-8.423 3.935h-75.057c-3.285 0-6.369-1.452-8.461-3.985-2.088-2.528-2.931-5.823-2.311-9.05l2.938-15.396c1.693-8.812 7.979-16.183 16.4-19.236l5.672-2.055c.142.146.285.293.439.428 6.463 5.651 14.57 8.477 22.682 8.476 8.102 0 16.207-2.82 22.671-8.46.233-.203.447-.422.651-.65l5.983 2.169c8.554 3.102 14.86 10.59 16.46 19.543zm-66.46-97.402c0-11.406 9.281-20.687 20.689-20.687 9.628 0 17.718 6.62 20.015 15.54-.964.471-1.953.916-2.966 1.321-9.222 3.692-16.671 3.202-18.8 1.71-3.392-2.378-8.068-1.558-10.447 1.834-2.378 3.392-1.557 8.068 1.834 10.447 3.663 2.569 8.635 3.853 14.309 3.853 5.155 0 10.89-1.071 16.745-3.19v9.329c0 5.733-2.371 11.347-6.506 15.402-1.914 1.878-4.107 3.333-6.462 4.337-.165.063-.327.131-.486.205-2.419.957-5.003 1.438-7.644 1.369-11.184-.215-20.281-9.494-20.281-20.684zm19.993 56.469c.229.004.456.006.685.006 3.519 0 6.967-.529 10.261-1.544v11.999c-6.251 3.854-14.242 3.852-20.485-.006v-11.971c3.034.919 6.231 1.452 9.539 1.516z"></path>
                                                 <path d="m88.264 350.904h233.57c4.143 0 7.5-3.357 7.5-7.5s-3.357-7.5-7.5-7.5h-233.57c-4.143 0-7.5 3.357-7.5 7.5s3.357 7.5 7.5 7.5z"></path>
@@ -172,7 +179,8 @@
                             <div class="col-lg-4 responsive-column-half">
                                 <div class="info-icon-box mb-3">
                                     <div class="icon-element icon-element-md shadow-sm">
-                                        <svg class="svg-icon-color-2" width="32" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                                        <svg class="svg-icon-color-2" width="32" viewBox="0 0 512 512"
+                                             xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <path d="m499.5 422h-10v-304.92c0-20.678-16.822-37.5-37.5-37.5h-108.332v-27.962c0-28.462-23.156-51.618-51.618-51.618h-72.1c-28.462 0-51.618 23.156-51.618 51.618v27.962h-108.332c-20.678 0-37.5 16.822-37.5 37.5v304.92h-10c-6.893 0-12.5 5.607-12.5 12.5v34.549c0 23.683 19.268 42.951 42.951 42.951h426.098c23.683 0 42.951-19.268 42.951-42.951v-34.549c0-6.893-5.607-12.5-12.5-12.5zm-155.832-307.112h2.347c6.299 0 11.423 5.124 11.423 11.423 0 6.298-5.124 11.422-11.423 11.422h-2.347zm0 37.844h2.347c15.203.011 27.366-12.987 26.36-28.152h72.125v249.151h-18.64v-41.301c0-14.129-4.877-27.975-13.732-38.988-8.856-11.014-21.335-18.751-35.139-21.786l-67.199-14.761c-4.975-1.086-8.438-5.551-8.44-10.494v-12.896c25.347-15.384 42.318-43.248 42.318-75.002zm-144.678 120.228 6.441-1.415c6.113-1.344 11.335-4.877 14.948-9.642l24.143 17.74-15.434 15.434zm29.701 38.208-3.889 62.563h-123.662v-41.301c0-22 15.599-41.398 37.09-46.124l41.257-9.062 43.142 31.702c1.838 1.349 3.941 2.081 6.062 2.222zm57.691-64.029-30.382 22.325-30.382-22.325c.031-.624.058-5.717.033-6.388 9.461 3.502 19.686 5.419 30.35 5.419s20.888-1.917 30.35-5.419c-.013.671-.005 5.765.031 6.388zm-42.032 53.89 11.65-11.65 11.599 11.599 4.258 72.753h-32.027zm23.129-21.385 24.143-17.74c3.613 4.765 8.835 8.298 14.948 9.642l6.44 1.415-30.098 22.118zm21.894 29.3 43.14-31.701 41.256 9.062c21.492 4.726 37.091 24.124 37.091 46.124v41.302h-123.976l-3.662-62.561c2.151-.126 4.287-.857 6.151-2.226zm-106.041-194.309c10.817-.592 21.509-2.153 31.874-4.66 4.026-.974 6.501-5.027 5.527-9.054-.975-4.026-5.026-6.503-9.054-5.526-9.216 2.229-18.722 3.628-28.348 4.202v-47.979c.001-20.191 16.428-36.618 36.619-36.618h72.1c20.191 0 36.618 16.427 36.618 36.618v45.1c-6.201-2.706-12.011-6.201-17.336-10.485-7.358-5.922-13.503-13.088-18.26-21.298-1.673-2.89-4.521-4.86-7.814-5.407-3.288-.544-6.619.398-9.132 2.589-10.05 8.761-21.15 16.144-33.04 21.971-3.719 1.822-5.257 6.315-3.434 10.035 1.821 3.718 6.313 5.258 10.035 3.434 11.728-5.747 22.683-12.825 32.811-21.178 5.302 8.187 11.822 15.419 19.43 21.54 8.063 6.488 17.038 11.5 26.74 14.939v45.645c0 40.069-32.599 72.668-72.668 72.668s-72.668-32.599-72.668-72.668zm27.318 118.869v12.896c-.006 4.93-3.494 9.415-8.439 10.494l-67.201 14.761c-13.803 3.035-26.281 10.772-35.138 21.786-8.855 11.014-13.732 24.859-13.732 38.988v41.302h-18.64v-249.151h72.125c-1.022 15.115 11.132 28.186 26.36 28.152h2.347v5.77c0 31.754 16.971 59.619 42.318 75.002zm-56.087-107.193c0-6.299 5.124-11.423 11.423-11.423h2.347v22.845h-2.347c-6.299-.001-11.423-5.125-11.423-11.422zm342.437 342.738c0 15.412-12.539 27.951-27.951 27.951h-426.098c-15.412 0-27.951-12.539-27.951-27.951v-32.049h190.545v12.5c0 9.649 7.851 17.5 17.5 17.5h65.91c9.649 0 17.5-7.851 17.5-17.5v-12.5h72.043c4.143 0 7.5-3.357 7.5-7.5s-3.357-7.5-7.5-7.5h-340.998v-304.92c0-12.406 10.094-22.5 22.5-22.5h108.332v5.308h-2.347c-8.226 0-15.584 3.78-20.434 9.692h-81.551c-6.341 0-11.5 5.159-11.5 11.5v260.151c0 4.143 3.357 7.5 7.5 7.5h392c4.143 0 7.5-3.357 7.5-7.5v-260.151c0-6.341-5.159-11.5-11.5-11.5h-81.551c-4.85-5.913-12.208-9.692-20.434-9.692h-2.347v-5.308h108.332c12.406 0 22.5 10.094 22.5 22.5v304.92h-61.002c-4.143 0-7.5 3.357-7.5 7.5s3.357 7.5 7.5 7.5h83.502zm-276.455-19.549v-12.5h70.91v12.5c0 1.379-1.121 2.5-2.5 2.5h-65.91c-1.379 0-2.5-1.121-2.5-2.5zm16.377-243.596c5.712 3.132 12.166 4.823 18.662 4.892 8.306.087 15.383-2.637 19.495-4.893 3.632-1.992 4.96-6.551 2.968-10.183s-6.549-4.961-10.183-2.968c-2.545 1.396-6.654 3.045-11.863 3.045-5.146 0-9.343-1.661-11.866-3.046-3.633-1.994-8.191-.661-10.183 2.97-1.991 3.633-.662 8.191 2.97 10.183zm-19.602-52.241c4.143 0 7.5-3.357 7.5-7.5v-15.472c0-4.143-3.357-7.5-7.5-7.5s-7.5 3.357-7.5 7.5v15.472c0 4.143 3.358 7.5 7.5 7.5zm77.36 0c4.143 0 7.5-3.357 7.5-7.5v-15.472c0-4.143-3.357-7.5-7.5-7.5s-7.5 3.357-7.5 7.5v15.472c0 4.143 3.357 7.5 7.5 7.5z"></path>
                                             </g>
@@ -184,7 +192,8 @@
                             <div class="col-lg-4 responsive-column-half">
                                 <div class="info-icon-box mb-3">
                                     <div class="icon-element icon-element-md shadow-sm">
-                                        <svg class="svg-icon-color-3" width="32" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                                        <svg class="svg-icon-color-3" width="32" version="1.1"
+                                             xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                                              viewBox="0 0 490.667 490.667" xml:space="preserve">
                                     <g>
                                         <g>
@@ -235,7 +244,8 @@
                             </div><!-- end col-lg-4 -->
                         </div>
                         <div class="btn-box">
-                            <a href="{% url 'main_app:about_us_page' %}" class="btn theme-btn">بیشتر بدانید <i class="la la-arrow-left icon ml-1"></i></a>
+                            <a href="{% url 'main_app:about_us_page' %}" class="btn theme-btn">بیشتر بدانید <i
+                                    class="la la-arrow-left icon ml-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -255,20 +265,184 @@
     </section>
 
     <!-- social networks links -->
-    <section class="client-logo-area section--padding position-relative overflow-hidden text-center bg-gray">
-        <span class="stroke-shape stroke-shape-1"></span>
-        <span class="stroke-shape stroke-shape-2"></span>
-        <span class="stroke-shape stroke-shape-3"></span>
-        <span class="stroke-shape stroke-shape-4"></span>
-        <span class="stroke-shape stroke-shape-5"></span>
-        <span class="stroke-shape stroke-shape-6"></span>
+    <style>
+        .social-icons-custom {
+            gap: 28px !important; /* فاصله بیشتر بین آیکون‌ها */
+        }
+
+        .social-icons-custom img {
+            width: 52px !important;
+            height: 52px !important;
+            object-fit: contain;
+            transition: transform 0.2s;
+            display: inline-block;
+        }
+
+        .social-icons-custom a:hover img {
+            transform: scale(1.18);
+        }
+
+        /* حذف پس‌زمینه یا افکت خاص هنگام هاور روی آیکون‌ها */
+        .social-icons-custom a.eitaa-bg,
+        .social-icons-custom a.bale-bg,
+        .social-icons-custom a.telegram-bg,
+        .social-icons-custom a.instagram-bg,
+        .social-icons-custom a.aparat-bg {
+            background: none !important;
+            box-shadow: none !important;
+            filter: none !important;
+        }
+
+        .social-icons-custom a.eitaa-bg:hover,
+        .social-icons-custom a.bale-bg:hover,
+        .social-icons-custom a.telegram-bg:hover,
+        .social-icons-custom a.instagram-bg:hover,
+        .social-icons-custom a.aparat-bg:hover {
+            background: none !important;
+            box-shadow: none !important;
+            filter: none !important;
+        }
+
+        /* مرکزچین کردن شبکه‌های اجتماعی در بخش خودشون */
+        @media (min-width: 768px) {
+            .social-icons-center-md {
+                display: flex;
+                justify-content: center !important;
+                align-items: center;
+                height: 100%;
+            }
+
+            /* آیکون‌ها در دسکتاپ بزرگ‌تر شوند */
+            .social-icons-custom img {
+                width: 72px !important;
+                height: 72px !important;
+            }
+
+            /* فاصله بیشتر بین آیکون‌ها در دسکتاپ */
+            .social-icons-custom {
+                gap: 48px !important; /* افزایش فاصله آیکون‌ها در دسکتاپ */
+            }
+        }
+
+        /* وقتی آیکون‌ها زیر متن قرار می‌گیرند (نمای موبایل) فاصله بیشتر بین متن و آیکون */
+        @media (max-width: 767.98px) {
+            .social-icons-under-title {
+                margin-top: 32px !important;
+            }
+        }
+
+        /* استایل جداکننده زیر فوتر */
+        .footer-separator {
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(to left, #e0e0e0 0%, #bdbdbd 100%);
+            margin: 0 auto 0 auto;
+            border: none;
+            opacity: 1;
+        }
+
+        /* --- VERTICAL CENTERING SECTION --- */
+        .client-logo-area {
+            display: flex;
+            align-items: center;
+            min-height: 180px; /* ارتفاع کمتر برای فاصله کمتر از بالا و پایین */
+            padding-top: 16px;
+            padding-bottom: 16px;
+        }
+
+        @media (min-width: 768px) {
+            .client-logo-area {
+                min-height: 220px; /* ارتفاع کمتر برای دسکتاپ */
+                padding-top: 24px;
+                padding-bottom: 24px;
+            }
+        }
+
+        .section-heading .row {
+            min-height: unset; /* حذف ارتفاع قبلی */
+            display: flex;
+            align-items: stretch;
+            height: 100%;
+        }
+
+        /* تراز عمودی دقیق متن و آیکون‌ها */
+        .align-center-vertical {
+            display: flex;
+            align-items: center;
+            height: 100%;
+        }
+
+        .section__title {
+            margin: 0;
+            white-space: nowrap;
+            line-height: 1.2;
+        }
+
+        @media (min-width: 768px) {
+            .section-heading .row {
+                min-height: unset;
+            }
+        }
+
+        /* حذف margin-top اضافی در موبایل برای تراز وسط */
+        @media (max-width: 767.98px) {
+            .social-icons-under-title {
+                margin-top: 0 !important;
+            }
+        }
+    </style>
+    <section class="client-logo-area position-relative overflow-hidden text-center bg-dark">
         <div class="container">
             <div class="section-heading">
-                <h2 class="section__title mb-3">مورد اعتماد شرکت ها در هر اندازه</h2>
-
+                <div class="row h-100">
+                    <div class="col-12 col-md-6 align-center-vertical justify-content-center justify-content-md-end ali"
+                         style="height:100%;">
+                        <h2 class="section__title text-white">ما را در شبکه های اجتماعی دنبال کنید</h2>
+                    </div>
+                    <div class="col-12 col-md-6 align-center-vertical justify-content-center justify-content-md-start"
+                         style="height:100%;">
+                        <div class="social-icons w-100 social-icons-under-title">
+                            <ul class="social-icons social-icons-styled social-icons-custom d-flex justify-content-center p-0 m-0"
+                                style="list-style: none;">
+                                <!-- ایتا -->
+                                <li>
+                                    <a href="#" target="_blank" class="eitaa-bg">
+                                        <img src="/static/images/social-network-icon/eitaa-icon-colorful.png"
+                                             alt="ایتا">
+                                    </a>
+                                </li>
+                                <!-- بله -->
+                                <li>
+                                    <a href="#" target="_blank" class="bale-bg">
+                                        <img src="/static/images/social-network-icon/bale-color.png" alt="بله">
+                                    </a>
+                                </li>
+                                <!-- تلگرام -->
+                                <li>
+                                    <a href="#" target="_blank" class="telegram-bg">
+                                        <img src="/static/images/social-network-icon/telegram.png" alt="تلگرام">
+                                    </a>
+                                </li>
+                                <!-- اینستاگرام -->
+                                <li>
+                                    <a href="#" target="_blank" class="instagram-bg">
+                                        <img src="/static/images/social-network-icon/instagram.png" alt="اینستاگرام">
+                                    </a>
+                                </li>
+                                <!-- آپارات -->
+                                <li>
+                                    <a href="#" target="_blank" class="aparat-bg">
+                                        <img src="/static/images/social-network-icon/aparat-205-GraFa-3.png"
+                                             alt="آپارات">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-
+    <hr class="footer-separator">
 
 {% endblock %}
