--- a/templates/shared/header_references.html
+++ b/templates/shared/header_references.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <link rel="preconnect" href="https://fonts.gstatic.com/">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&amp;display=swap" >
 <link rel="icon" sizes="16x16" href="{% static 'images/favicon.png' %}">
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/line-awesome.css' %}">
